--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,19 @@ body {
 .hidden {
   display: none;
 }
+
+.square_style {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+}
+
+#game_grid {
+  width: 500px;
+  height: 500px;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+} 
+/* le dimensioni sono da gestire con js e css se difficoltà à facile -> width = 500px ed height = 500px ecc*/
