--- a/css/style.css
+++ b/css/style.css
@@ -88,16 +88,32 @@ body {
 
 .square_style {
   display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-top: 1px solid black;
+  width: 60px;
+  height: 60px;
+  border-bottom: 1px solid black;
   border-right: 1px solid black;
 }
 
-#game_grid {
-  width: 500px;
-  height: 500px;
+.game_grid_500 {
+  width: 602px;
+  height: 600px;
+  margin: auto;
+  border-top: 1px solid black;
   border-left: 1px solid black;
-  border-bottom: 1px solid black;
+} 
+.game_grid_400 {
+  width: 602px;
+  height: 480px;
+  margin: auto;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  
+} 
+.game_grid_250 {
+  width: 602px;
+  height: 300px;
+  margin: auto;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
 } 
 /* le dimensioni sono da gestire con js e css se difficoltà à facile -> width = 500px ed height = 500px ecc*/
