--- a/css/style.css
+++ b/css/style.css
@@ -86,34 +86,48 @@ body {
   display: none;
 }
 
+#grid_container {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+}
+
 .square_style {
-  display: inline-block;
-  width: 60px;
-  height: 60px;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: calc(60px - 2px);
+  height: calc(60px - 2px);
+  margin: 1px;
+  /* border: 1px solid; */
+  background-color: white;
+  /* background-image: url('../img/bomb.png'); */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.square_style img {
+  width: 58px;
+}
+
+
+/* griglia di gioco */
+.game_grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 602px;
+  border: 1px solid lightcoral;
+  margin: auto;
+  background-color: lightcoral;
 }
 
 .game_grid_500 {
-  width: 602px;
-  height: 600px;
-  margin: auto;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-} 
+  height: 602px;
+}
 .game_grid_400 {
-  width: 602px;
-  height: 480px;
-  margin: auto;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-  
-} 
+  height: 482px;
+}
 .game_grid_250 {
-  width: 602px;
-  height: 300px;
-  margin: auto;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-} 
-/* le dimensioni sono da gestire con js e css se difficoltà à facile -> width = 500px ed height = 500px ecc*/
+  height: 302px;
+}
